@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020171026"
-#define public MagickPackageReleaseDate "snapshot-20171026"
+#define public MagickPackageVersionAddendum ".020171027"
+#define public MagickPackageReleaseDate "snapshot-20171027"
